// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BpkTableRow should render correctly 1`] = `
<tr>
  <td />
</tr>
`;

exports[`BpkTableRow should render correctly with custom props 1`] = `
<tr
  className="testing"
  id="test"
>
  <td />
</tr>
`;
